src/main/java/com/example/EScorerServer/errors/SummaryNotFoundException.java
package com.example.EScorerServer.errors;

public class SummaryNotFoundException extends RuntimeException {
    public SummaryNotFoundException(int summaryId) {
        super("Summary not found " + summaryId);
    }
}
